# PowerSpecCovFFT

./: README.md  power_law_decomp.py  pyproject.toml  utils.py
coeff_func/: T2211_1_l00_a4_b1.txt  T2211_1_l00_a4_b2.txt  T2211_1_l00_a4_b4.txt  T2211_1_l00_a4_b5.txt  T2211_1_l02_a4_b2.txt  T2211_1_l02_a4_b4.txt  T2211_1_l02_a4_b5.txt  T2211_1_l04_a0_b4.txt  T2211_1_l04_a2_b0.txt  T2211_1_l04_a2_b2.txt  T2211_1_l04_a2_b5.txt  T2211_1_l04_a4_b0.txt  T2211_1_l04_a4_b2.txt  T2211_1_l04_a4_b3.txt  T2211_1_l04_a4_b4.txt  T2211_1_l04_a4_b5.txt  T2211_1_l04_a4_b7.txt  T2211_1_l22_a4_b4.txt  T2211_1_l22_a4_b5.txt  T2211_1_l22_a4_b8.txt  T2211_1_l24_a4_b2.txt  T2211_1_l24_a4_b4.txt  T2211_1_l24_a4_b7.txt  T2211_1_l24_a4_b9.txt  T2211_1_l44_a4_b11.txt  T2211_1_l44_a4_b2.txt  T2211_1_l44_a4_b7.txt  T2211_2_l00_a4_b1.txt  T2211_2_l00_a4_b3.txt  T2211_2_l00_a4_b6.txt  T2211_2_l00_a4_b8.txt  T2211_2_l02_a4_b0.txt  T2211_2_l02_a4_b2.txt  T2211_2_l02_a4_b3.txt  T2211_2_l02_a4_b5.txt  T2211_2_l02_a4_b7.txt  T2211_2_l04_a4_b0.txt  T2211_2_l04_a4_b1.txt  T2211_2_l04_a4_b3.txt  T2211_2_l04_a4_b4.txt  (+57 more)
example/: cov_non-gauss.ipynb
integrand/: T2211_1_l24.txt  T2211_2_l04.txt  T2211_2_l22.txt  T2211_2_l44.txt  T3111_diag_l02.txt  T3111_diag_l22.txt  T3111_l00.txt  T3111_l04.txt  T3111_l22.txt  T_SN_B_1_diag_l00.txt  T_SN_B_1_diag_l04.txt  T_SN_B_1_diag_l44.txt  T_SN_B_1_l00.txt  T_SN_B_1_l44.txt  T_SN_B_2_l04.txt  T_SN_B_2_l44.txt  T_SN_P_l24.txt
master_int/: poly_b0.txt  poly_b1.txt  poly_b12.txt  poly_b3.txt  poly_b8.txt  z0lim20_b0.txt  z0lim20_b1.txt  z0lim20_b10.txt  z0lim20_b11.txt  (+12 more)
(+398 files in other folders)
